src/parser.output
Terminals unused in grammar

   LAMBDA
   BOOLEAN_OPENER
   LIST_ELEMENT_OF


Grammar

    0 $accept: program $end

    1 program: program definition
    2        | definition

    3 definition: function_definition
    4           | DEFINE ID AS form

    5 function_definition: FUNCTION ID OPEN_PAREN CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE
    6                    | FUNCTION ID OPEN_PAREN expression_list CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE

    7 form_list: form_list form
    8          | form

    9 form: statement
   10     | OPEN_BRACE form_list CLOSE_BRACE
   11     | expression SEMICOLON

   12 statement: LET assignment_form FOR form
   13          | IF OPEN_PAREN expression CLOSE_PAREN form ELSE form
   14          | COND OPEN_BRACE condition_list CLOSE_BRACE
   15          | ERROR OPEN_PAREN expression CLOSE_PAREN form
   16          | REC OPEN_PAREN expression_list CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE ON OPEN_PAREN expression_list CLOSE_PAREN

   17 expression_list: expression_list COMMA expression
   18                | expression

   19 expression: ID OPEN_PAREN CLOSE_PAREN
   20           | ID OPEN_BRACE form_list CLOSE_BRACE
   21           | ID OPEN_PAREN expression_list CLOSE_PAREN
   22           | LIST OPEN_PAREN CLOSE_PAREN
   23           | LIST OPEN_BRACE form_list CLOSE_BRACE
   24           | LIST OPEN_PAREN expression_list CLOSE_PAREN
   25           | RECUR OPEN_PAREN expression_list CLOSE_PAREN
   26           | RECUR OPEN_BRACE form_list CLOSE_BRACE
   27           | ID OPEN_BRACKET expression CLOSE_BRACKET
   28           | expression ARITH_ADD expression
   29           | expression ARITH_SUB expression
   30           | expression ARITH_MUL expression
   31           | expression ARITH_DIV expression
   32           | expression ARITH_MOD expression
   33           | BOOLEAN_NOT expression
   34           | expression BOOLEAN_AND expression
   35           | expression BOOLEAN_OR expression
   36           | expression BOOLEAN_XOR expression
   37           | expression BOOLEAN_IMP expression
   38           | expression BOOLEAN_DIMP expression
   39           | expression BOOLEAN_EQ expression
   40           | expression BOOLEAN_NEQ expression
   41           | expression BOOLEAN_LT expression
   42           | expression BOOLEAN_GT expression
   43           | expression BOOLEAN_LTE expression
   44           | expression BOOLEAN_GTE expression
   45           | expression BOOLEAN_EQV expression
   46           | LIST_CAR expression
   47           | LIST_CDR expression
   48           | expression LIST_CONS expression
   49           | expression LIST_APPEND expression
   50           | expression LIST_UNION expression
   51           | expression LIST_INTERSECTION expression
   52           | expression LIST_COMPLEMENT expression
   53           | expression LIST_BICOMPLEMENT expression
   54           | expression LIST_MEMBER expression
   55           | expression LIST_SUBSET expression
   56           | OPEN_PAREN expression CLOSE_PAREN
   57           | ID
   58           | literal

   59 condition_list: condition_list condition
   60               | condition

   61 condition: CASE OPEN_PAREN expression CLOSE_PAREN form
   62          | DEFAULT form

   63 assignment_form: OPEN_BRACE assignment_list CLOSE_BRACE
   64                | assignment_list

   65 assignment_list: assignment_list assignment
   66                | assignment

   67 assignment: ID ASSIGN form

   68 literal: INTEGER
   69        | DOUBLE
   70        | STRING
   71        | CHARACTER
   72        | SYMBOL
   73        | BOOLEAN


Terminals, with rules where they appear

$end (0) 0
error (256)
OPEN_BRACE (258) 5 6 10 14 16 20 23 26 63
CLOSE_BRACE (259) 5 6 10 14 16 20 23 26 63
OPEN_PAREN (260) 5 6 13 15 16 19 21 22 24 25 56 61
CLOSE_PAREN (261) 5 6 13 15 16 19 21 22 24 25 56 61
OPEN_BRACKET (262) 27
CLOSE_BRACKET (263) 27
LET (264) 12
FOR (265) 12
LAMBDA (266)
IF (267) 13
ELSE (268) 13
COND (269) 14
LIST (270) 22 23 24
DEFAULT (271) 62
ASSIGN (272) 67
SEMICOLON (273) 11
ERROR (274) 15
BOOLEAN_OPENER (275)
CASE (276) 61
FUNCTION (277) 5 6
COMMA (278) 17
REC (279) 16
RECUR (280) 25 26
ON (281) 16
DEFINE (282) 4
AS (283) 4
BOOLEAN_AND (284) 34
BOOLEAN_OR (285) 35
BOOLEAN_XOR (286) 36
BOOLEAN_NOT (287) 33
BOOLEAN_IMP (288) 37
BOOLEAN_DIMP (289) 38
BOOLEAN_EQ (290) 39
BOOLEAN_NEQ (291) 40
BOOLEAN_LT (292) 41
BOOLEAN_GT (293) 42
BOOLEAN_LTE (294) 43
BOOLEAN_GTE (295) 44
BOOLEAN_EQV (296) 45
LIST_APPEND (297) 49
LIST_CONS (298) 48
LIST_CAR (299) 46
LIST_CDR (300) 47
LIST_ELEMENT_OF (301)
LIST_UNION (302) 50
LIST_INTERSECTION (303) 51
LIST_COMPLEMENT (304) 52
LIST_BICOMPLEMENT (305) 53
LIST_MEMBER (306) 54
LIST_SUBSET (307) 55
ARITH_ADD (308) 28
ARITH_SUB (309) 29
ARITH_MUL (310) 30
ARITH_DIV (311) 31
ARITH_MOD (312) 32
INTEGER (313) 68
DOUBLE (314) 69
STRING (315) 70
SYMBOL (316) 72
BOOLEAN (317) 73
ID (318) 4 5 6 19 20 21 27 57 67
CHARACTER (319) 71


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
program (66)
    on left: 1 2, on right: 0 1
definition (67)
    on left: 3 4, on right: 1 2
function_definition (68)
    on left: 5 6, on right: 3
form_list (69)
    on left: 7 8, on right: 5 6 7 10 16 20 23 26
form (70)
    on left: 9 10 11, on right: 4 7 8 12 13 15 61 62 67
statement (71)
    on left: 12 13 14 15 16, on right: 9
expression_list (72)
    on left: 17 18, on right: 6 16 17 21 24 25
expression (73)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58, on right: 11 13 15 17 18 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 61
condition_list (74)
    on left: 59 60, on right: 14 59
condition (75)
    on left: 61 62, on right: 59 60
assignment_form (76)
    on left: 63 64, on right: 12
assignment_list (77)
    on left: 65 66, on right: 63 64 65
assignment (78)
    on left: 67, on right: 65 66
literal (79)
    on left: 68 69 70 71 72 73, on right: 58


state 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1
    DEFINE    shift, and go to state 2

    program              go to state 3
    definition           go to state 4
    function_definition  go to state 5


state 1

    5 function_definition: FUNCTION . ID OPEN_PAREN CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE
    6                    | FUNCTION . ID OPEN_PAREN expression_list CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE

    ID  shift, and go to state 6


state 2

    4 definition: DEFINE . ID AS form

    ID  shift, and go to state 7


state 3

    0 $accept: program . $end
    1 program: program . definition

    $end      shift, and go to state 8
    FUNCTION  shift, and go to state 1
    DEFINE    shift, and go to state 2

    definition           go to state 9
    function_definition  go to state 5


state 4

    2 program: definition .

    $default  reduce using rule 2 (program)


state 5

    3 definition: function_definition .

    $default  reduce using rule 3 (definition)


state 6

    5 function_definition: FUNCTION ID . OPEN_PAREN CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE
    6                    | FUNCTION ID . OPEN_PAREN expression_list CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE

    OPEN_PAREN  shift, and go to state 10


state 7

    4 definition: DEFINE ID . AS form

    AS  shift, and go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    1 program: program definition .

    $default  reduce using rule 1 (program)


state 10

    5 function_definition: FUNCTION ID OPEN_PAREN . CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE
    6                    | FUNCTION ID OPEN_PAREN . expression_list CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13
    LIST         shift, and go to state 14
    RECUR        shift, and go to state 15
    BOOLEAN_NOT  shift, and go to state 16
    LIST_CAR     shift, and go to state 17
    LIST_CDR     shift, and go to state 18
    INTEGER      shift, and go to state 19
    DOUBLE       shift, and go to state 20
    STRING       shift, and go to state 21
    SYMBOL       shift, and go to state 22
    BOOLEAN      shift, and go to state 23
    ID           shift, and go to state 24
    CHARACTER    shift, and go to state 25

    expression_list  go to state 26
    expression       go to state 27
    literal          go to state 28


state 11

    4 definition: DEFINE ID AS . form

    OPEN_BRACE   shift, and go to state 29
    OPEN_PAREN   shift, and go to state 12
    LET          shift, and go to state 30
    IF           shift, and go to state 31
    COND         shift, and go to state 32
    LIST         shift, and go to state 14
    ERROR        shift, and go to state 33
    REC          shift, and go to state 34
    RECUR        shift, and go to state 15
    BOOLEAN_NOT  shift, and go to state 16
    LIST_CAR     shift, and go to state 17
    LIST_CDR     shift, and go to state 18
    INTEGER      shift, and go to state 19
    DOUBLE       shift, and go to state 20
    STRING       shift, and go to state 21
    SYMBOL       shift, and go to state 22
    BOOLEAN      shift, and go to state 23
    ID           shift, and go to state 24
    CHARACTER    shift, and go to state 25

    form        go to state 35
    statement   go to state 36
    expression  go to state 37
    literal     go to state 28


state 12

   56 expression: OPEN_PAREN . expression CLOSE_PAREN

    OPEN_PAREN   shift, and go to state 12
    LIST         shift, and go to state 14
    RECUR        shift, and go to state 15
    BOOLEAN_NOT  shift, and go to state 16
    LIST_CAR     shift, and go to state 17
    LIST_CDR     shift, and go to state 18
    INTEGER      shift, and go to state 19
    DOUBLE       shift, and go to state 20
    STRING       shift, and go to state 21
    SYMBOL       shift, and go to state 22
    BOOLEAN      shift, and go to state 23
    ID           shift, and go to state 24
    CHARACTER    shift, and go to state 25

    expression  go to state 38
    literal     go to state 28


state 13

    5 function_definition: FUNCTION ID OPEN_PAREN CLOSE_PAREN . OPEN_BRACE form_list CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 39


state 14

   22 expression: LIST . OPEN_PAREN CLOSE_PAREN
   23           | LIST . OPEN_BRACE form_list CLOSE_BRACE
   24           | LIST . OPEN_PAREN expression_list CLOSE_PAREN

    OPEN_BRACE  shift, and go to state 40
    OPEN_PAREN  shift, and go to state 41


state 15

   25 expression: RECUR . OPEN_PAREN expression_list CLOSE_PAREN
   26           | RECUR . OPEN_BRACE form_list CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 42
    OPEN_PAREN  shift, and go to state 43


state 16

   33 expression: BOOLEAN_NOT . expression

    OPEN_PAREN   shift, and go to state 12
    LIST         shift, and go to state 14
    RECUR        shift, and go to state 15
    BOOLEAN_NOT  shift, and go to state 16
    LIST_CAR     shift, and go to state 17
    LIST_CDR     shift, and go to state 18
    INTEGER      shift, and go to state 19
    DOUBLE       shift, and go to state 20
    STRING       shift, and go to state 21
    SYMBOL       shift, and go to state 22
    BOOLEAN      shift, and go to state 23
    ID           shift, and go to state 24
    CHARACTER    shift, and go to state 25

    expression  go to state 44
    literal     go to state 28


state 17

   46 expression: LIST_CAR . expression

    OPEN_PAREN   shift, and go to state 12
    LIST         shift, and go to state 14
    RECUR        shift, and go to state 15
    BOOLEAN_NOT  shift, and go to state 16
    LIST_CAR     shift, and go to state 17
    LIST_CDR     shift, and go to state 18
    INTEGER      shift, and go to state 19
    DOUBLE       shift, and go to state 20
    STRING       shift, and go to state 21
    SYMBOL       shift, and go to state 22
    BOOLEAN      shift, and go to state 23
    ID           shift, and go to state 24
    CHARACTER    shift, and go to state 25

    expression  go to state 45
    literal     go to state 28


state 18

   47 expression: LIST_CDR . expression

    OPEN_PAREN   shift, and go to state 12
    LIST         shift, and go to state 14
    RECUR        shift, and go to state 15
    BOOLEAN_NOT  shift, and go to state 16
    LIST_CAR     shift, and go to state 17
    LIST_CDR     shift, and go to state 18
    INTEGER      shift, and go to state 19
    DOUBLE       shift, and go to state 20
    STRING       shift, and go to state 21
    SYMBOL       shift, and go to state 22
    BOOLEAN      shift, and go to state 23
    ID           shift, and go to state 24
    CHARACTER    shift, and go to state 25

    expression  go to state 46
    literal     go to state 28


state 19

   68 literal: INTEGER .

    $default  reduce using rule 68 (literal)


state 20

   69 literal: DOUBLE .

    $default  reduce using rule 69 (literal)


state 21

   70 literal: STRING .

    $default  reduce using rule 70 (literal)


state 22

   72 literal: SYMBOL .

    $default  reduce using rule 72 (literal)


state 23

   73 literal: BOOLEAN .

    $default  reduce using rule 73 (literal)


state 24

   19 expression: ID . OPEN_PAREN CLOSE_PAREN
   20           | ID . OPEN_BRACE form_list CLOSE_BRACE
   21           | ID . OPEN_PAREN expression_list CLOSE_PAREN
   27           | ID . OPEN_BRACKET expression CLOSE_BRACKET
   57           | ID .

    OPEN_BRACE    shift, and go to state 47
    OPEN_PAREN    shift, and go to state 48
    OPEN_BRACKET  shift, and go to state 49

    $default  reduce using rule 57 (expression)


state 25

   71 literal: CHARACTER .

    $default  reduce using rule 71 (literal)


state 26

    6 function_definition: FUNCTION ID OPEN_PAREN expression_list . CLOSE_PAREN OPEN_BRACE form_list CLOSE_BRACE
   17 expression_list: expression_list . COMMA expression

    CLOSE_PAREN  shift, and go to state 50
    COMMA        shift, and go to state 51


state 27
